; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_uart.c_l_uart_setup.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_uart.c_l_uart_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@uart = common dso_local global i32 0, align 4
@uart0_echo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @l_uart_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @l_uart_setup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i64 1, i64* %7, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @luaL_checkinteger(i32* %10, i32 1)
  store i64 %11, i64* %3, align 8
  %12 = load i32, i32* @uart, align 4
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @MOD_CHECK_ID(i32 %12, i64 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i64 @luaL_checkinteger(i32* %15, i32 2)
  store i64 %16, i64* %8, align 8
  %17 = load i32*, i32** %2, align 8
  %18 = call i64 @luaL_checkinteger(i32* %17, i32 3)
  store i64 %18, i64* %4, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = call i64 @luaL_checkinteger(i32* %19, i32 4)
  store i64 %20, i64* %5, align 8
  %21 = load i32*, i32** %2, align 8
  %22 = call i64 @luaL_checkinteger(i32* %21, i32 5)
  store i64 %22, i64* %6, align 8
  %23 = load i32*, i32** %2, align 8
  %24 = call i64 @lua_isnumber(i32* %23, i32 6)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %34

26:                                               ; preds = %1
  %27 = load i32*, i32** %2, align 8
  %28 = call i64 @lua_tointeger(i32* %27, i32 6)
  store i64 %28, i64* %7, align 8
  %29 = load i64, i64* %7, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %26
  store i32 1, i32* @uart0_echo, align 4
  br label %33

32:                                               ; preds = %26
  store i32 0, i32* @uart0_echo, align 4
  br label %33

33:                                               ; preds = %32, %31
  br label %34

34:                                               ; preds = %33, %1
  %35 = load i64, i64* %3, align 8
  %36 = load i64, i64* %8, align 8
  %37 = load i64, i64* %4, align 8
  %38 = load i64, i64* %5, align 8
  %39 = load i64, i64* %6, align 8
  %40 = call i64 @platform_uart_setup(i64 %35, i64 %36, i64 %37, i64 %38, i64 %39)
  store i64 %40, i64* %9, align 8
  %41 = load i32*, i32** %2, align 8
  %42 = load i64, i64* %9, align 8
  %43 = call i32 @lua_pushinteger(i32* %41, i64 %42)
  ret i32 1
}

declare dso_local i64 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32 @MOD_CHECK_ID(i32, i64) #1

declare dso_local i64 @lua_isnumber(i32*, i32) #1

declare dso_local i64 @lua_tointeger(i32*, i32) #1

declare dso_local i64 @platform_uart_setup(i64, i64, i64, i64, i64) #1

declare dso_local i32 @lua_pushinteger(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
